# gs1-vectoRAG-classifier

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt  vectorize.py
docs/: APP_DESIGN_PROMPT.md  BUILD_GUIDE_PART_1.md  BUILD_GUIDE_PART_2.md  CONFIG.md  SWAPPABLE_PARTS.md  TESTING_GUIDE.md  WORKFLOW.md
src/: dto.py  factory.py
src/config/: models.py
src/services/: gs1_parser.py  orchestrator.py
src/services/db/: azure_sql_connector.py  base.py  duckdb_connector.py  mysql_connector.py  postgresql.py  sqlite_connector.py
src/services/embedding/: azure_openai_embedder.py  base.py  cohere_embedder.py  huggingface.py  ollama_embedder.py  openai_embedder.py
src/services/llm/: anthropic_chat.py  azure_openai_chat.py  base.py  google_gemini_chat.py  mistral_chat.py  ollama_chat.py  openai_chat.py
src/services/vectorstore/: azure_ai_search_store.py  base.py  chromadb_store.py  faiss_store.py  pgvector_store.py  qdrant_store.py
src/transforms/: candidate_builder.py  response_parser.py
src/utils/: batching.py  console.py  env.py  exceptions.py  logging.py  retry.py  templates.py
src/workflows/: build_vectors.py  classify.py  embed_rows.py
templates/: gs1_classification.j2  gs1_system.j2
